updated package name according jfxplace updates